# LPF

./: .gitlab-ci.yml  CMakeLists.txt  NOC_README.md  NOTICE  README  bootstrap.sh  lpf-config.cmake.in  lpfcc.in  lpfcxx.in  lpfprobe.in  lpfproxy.in  lpfrun.in  test_launcher.py  test_launcher.py.in
cmake/: googletest.cmake  (+11 more)
doc/: CMakeLists.txt  lpf_core.cfg.in
examples/list/: CMakeLists.txt  list_test.cpp  lpf.hpp  lpf_list.hpp  lpf_random.c  lpf_random.h  lpf_sort.hpp
post-install/: CMakeLists.txt  post-install-test.cmake.in  test-lpf-debug.c  test-lpf-nprocs.c
post-install/cmake-lpfcc-compact-test/: CMakeLists.txt  hello.c  hello.cpp
post-install/cmake-module-test/src/: CMakeLists.txt  main.c
src/: CMakeLists.txt
src/MPI/: CMakeLists.txt  communication.hpp  core.cpp  dall2all.hpp  dall2all.t.cpp  dynamichook.cpp  dynamichook.hpp  dynamichook.t.cpp  dynamichook.t.sh.in  func_lpf_test_noc_register.cpp  func_verbs_test_noc_register.cpp  hall2all.hpp  hall2all.t.cpp  ibverbs.cpp  ibverbs.hpp  ibverbs.t.cpp  ibverbsNoc.cpp  ibverbsNoc.hpp  ibverbsZero.cpp  init.cpp  interface.cpp  interface.hpp  ipcmesg.hpp  ipcmesg.t.cpp  memorytable.cpp  memorytable.hpp  mesgqueue.cpp  mesgqueue.hpp  mesgqueueNoc.cpp  mesgqueueNoc.hpp  messagesort.cpp  messagesort.hpp  messagesort.t.cpp  mpilib.cpp  mpilib.hpp  mpirpc.c  process.cpp  process.hpp  proxydummy.c  spall2all.c  (+9 more)
src/bsplib/: CMakeLists.txt  bsp.cpp
src/common/: CMakeLists.txt  assert.hpp  config.cpp  config.hpp  linkage.hpp  log.cpp  log.hpp  machineparams.cpp  machineparams.hpp  memreg.hpp  memreg.t.cpp  micromsg.hpp  rng.c  rng.h  sparseset.hpp  sparseset.t.cpp  stack.cpp  stack.hpp  suppressions.h  time.cpp  time.hpp  time.t.cpp
src/core-libraries/: CMakeLists.txt  bsmp.c  bsplib.cpp  collectives.c  rpc-client.c
src/debug/: CMakeLists.txt  core.cpp  rwconflict.cpp  rwconflict.hpp  rwconflict.t.cpp
src/eclib/: MPI_PP.c  Makefile  ec.c  ec.h  perfs.c  perfs.h  pingpong.c  pingpong.h
src/hybrid/: CMakeLists.txt  blob.hpp  core.cpp  dispatch.cpp  dispatch.hpp  lpfexec.cpp  nodememreg.hpp  nodemsgqueue.hpp  pinning.hpp  state.hpp
src/imp/: CMakeLists.txt  core.c
src/optional/: CMakeLists.txt  noc-standalone.cpp  noc-udp-internal.hpp  noc-udp.cpp
src/pthreads/: CMakeLists.txt  barrier.cpp  barrier.hpp  core.cpp  globalstate.cpp  globalstate.hpp  init.cpp  memcopy.cpp  memcopy.hpp  msgqueue.cpp  msgqueue.hpp  threadlocaldata.cpp  threadlocaldata.hpp  types.hpp
src/utils/: CMakeLists.txt  lpfprobe.c
tests/functional/: CMakeLists.txt  Test.h  exception_list  func_bsplib_example_lpf_sum.c  func_bsplib_example_lpf_sum.cpp  func_bsplib_example_lpf_sum_unsafemode.cpp  func_bsplib_example_put_array.c  func_bsplib_example_put_array.cpp  func_bsplib_example_put_array_unsafemode.c  func_bsplib_example_put_array_unsafemode.cpp  func_bsplib_example_reverse.cpp  func_bsplib_example_reverse_unsafemode.cpp  func_bsplib_get_exceptions.c  func_bsplib_get_exceptions.cpp  func_bsplib_get_normal.c  func_bsplib_get_normal.cpp  func_bsplib_get_normal_unsafemode.cpp  func_bsplib_get_twice_on_same_remote.c  func_bsplib_get_twice_on_same_remote.cpp  func_bsplib_get_twice_on_same_remote_unsafemode.cpp  func_bsplib_getput_same_dest.c  func_bsplib_getput_same_dest.cpp  func_bsplib_getput_same_dest_unsafemode.c  func_bsplib_getput_same_dest_unsafemode.cpp  func_bsplib_getput_same_remote.c  func_bsplib_getput_same_remote.cpp  func_bsplib_getput_same_remote_unsafemode.c  func_bsplib_getput_same_remote_unsafemode.cpp  func_bsplib_getput_zero_bytes.c  func_bsplib_getput_zero_bytes.cpp  func_bsplib_hpget_many.c  func_bsplib_hpget_many.cpp  func_bsplib_hpput_many.cpp  func_bsplib_hpsend_many.c  func_bsplib_hpsend_many.cpp  func_bsplib_nprocs.cpp  func_bsplib_pid.cpp  func_bsplib_pushpopreg_ambiguous.c  func_bsplib_pushpopreg_ambiguous.cpp  func_bsplib_pushpopreg_different_variables.cpp  (+118 more)
tests/functional/c99/: CMakeLists.txt  func_lpf_allcombine.c  func_lpf_allgather.c  func_lpf_allgather_overlapped.c  func_lpf_allreduce.c  func_lpf_alltoall.c  func_lpf_broadcast.c  func_lpf_broadcast_prime_size_object.c  func_lpf_broadcast_small_prime_size_object.c  func_lpf_collectives_init.c  func_lpf_collectives_init_overflow.c  func_lpf_combine.c  func_lpf_gather.c  func_lpf_reduce.c  func_lpf_scatter.c
tests/functional/collectives/: CMakeLists.txt  func_lpf_allcombine.cpp  func_lpf_allgather.cpp  func_lpf_allgather_overlapped.cpp  func_lpf_allreduce.cpp  func_lpf_alltoall.cpp  func_lpf_broadcast.cpp  func_lpf_broadcast_prime_size_object.cpp  func_lpf_broadcast_small_prime_size_object.cpp  func_lpf_collectives_init.cpp  func_lpf_collectives_init_overflow.cpp  func_lpf_combine.cpp  func_lpf_gather.cpp  func_lpf_reduce.cpp  func_lpf_scatter.cpp  func_lpf_zero_cost.cpp
tests/functional/debug/: CMakeLists.txt  func_lpf_debug_deregister_non_existing_slot.c  func_lpf_debug_deregister_non_existing_slot.cpp  func_lpf_debug_exec_null_f_symbols.c  func_lpf_debug_exec_null_f_symbols.cpp  func_lpf_debug_exec_null_input.c  func_lpf_debug_exec_null_input.cpp  func_lpf_debug_exec_null_output.c  func_lpf_debug_exec_null_output.cpp  func_lpf_debug_exec_null_spmd.c  func_lpf_debug_exec_null_spmd.cpp  func_lpf_debug_get_local_src_slot.c  func_lpf_debug_get_local_src_slot.cpp  func_lpf_debug_get_overflow_dst_offset.c  func_lpf_debug_get_overflow_dst_offset.cpp  func_lpf_debug_get_overflow_src_offset.c  func_lpf_debug_get_overflow_src_offset.cpp  func_lpf_debug_get_read_past_source_memory_global_known_at_sync.c  func_lpf_debug_get_read_past_source_memory_global_known_at_sync.cpp  func_lpf_debug_get_read_past_source_memory_global_known_before_sync.c  func_lpf_debug_get_read_past_source_memory_global_known_before_sync.cpp  func_lpf_debug_get_too_many_requests.c  func_lpf_debug_get_too_many_requests.cpp  func_lpf_debug_get_too_many_requests_remote.c  func_lpf_debug_get_too_many_requests_remote.cpp  func_lpf_debug_get_too_many_requests_self.c  func_lpf_debug_get_too_many_requests_self.cpp  func_lpf_debug_get_unknown_dest_slot.c  (+78 more)
tests/performance/: CMakeLists.txt  alltoall.c
(+24 files in other folders)
